--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Girls Ludo WhatsApp Group Links | JokerLudo</title>
-  <meta name="description" content="Join active Girls Ludo WhatsApp Group Links to play and enjoy with female Ludo lovers. Updated daily with real groups." />
-  <meta name="keywords" content="Girls Ludo WhatsApp Group, Ludo Group for Girls, JokerLudo Girls Groups, Ludo WhatsApp Invite Links" />
+  <title>JOKER LUDO GIRLS Group</title>
+  <meta name="description" content="Join Joker Ludo Girls WhatsApp Group to play fun games with female Ludo players. Updated daily." />
+  <meta name="keywords" content="JOKER LUDO GIRLS Group, Girls Ludo WhatsApp Group, Ludo Group for Girls, JokerLudo Girls" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://ludogrouplink.com/girls-ludo-group-links" />
 
-  <!-- Open Graph for Social Sharing -->
-  <meta property="og:title" content="Girls Ludo WhatsApp Group Links | JokerLudo" />
-  <meta property="og:description" content="Daily updated Girls Ludo WhatsApp groups. Join and enjoy Ludo with other girls." />
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="JOKER LUDO GIRLS Group" />
+  <meta property="og:description" content="Join JokerLudo Girls Group for fun Ludo matches & community." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ludogrouplink.com/girls-ludo-group-links" />
   <meta property="og:image" content="https://ludogrouplink.com/assets/og-ludo-girls.jpg" />
@@ -67,7 +67,7 @@
 <body>
 
 <header>
-  <h1>JokerLudo Group</h1>
+  <h1>JOKER LUDO GIRLS Group</h1>
   <nav>
     <a href="/">Home</a>
     <a href="/regional.html">Regional</a>
@@ -81,11 +81,10 @@
 </header>
 
 <div class="container">
-      <a href="index.html" class="logo">🎲 JokerLudo Group</a>
-    <div class="nav-links">
-  <h1>Girls Ludo WhatsApp Group Links (Updated)</h1>
-  <p>Looking to join fun and active Girls Ludo WhatsApp Groups? Here's a handpicked list of updated links where female Ludo players play, chat, and have fun together! 🎮💃</p>
+  <h1>Girls Ludo WhatsApp Group Links (Active)</h1>
+  <p>Welcome to the official JOKER LUDO GIRLS group links collection! Join now and connect with awesome female players from across India. 🎲💃</p>
 
+  <!-- Group Cards with same WhatsApp link -->
   <div class="group-box">
     <h3>👑 Girls Only Ludo Group</h3>
     <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
@@ -101,18 +100,28 @@
     <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
   </div>
 
-  <p>👉 Note: These groups are for fun and friendly Ludo matches. Please follow group rules and respect all members.</p>
+  <div class="group-box">
+    <h3>👸 Active Girls Ludo Room</h3>
+    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
+  </div>
 
-  <h2>More Ludo Groups You Might Like</h2>
+  <div class="group-box">
+    <h3>💃 Ludo Queens Daily Match</h3>
+    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
+  </div>
+
+  <p>✅ Note: These are verified WhatsApp groups. Please follow the group rules & enjoy playing Ludo!</p>
+
+  <h2>Other Group Links</h2>
   <ul>
-    <li><a href="/regional.html">Regional Ludo WhatsApp Groups</a></li>
-    <li><a href="/entertaining.html">Funny & Entertaining Ludo Groups</a></li>
-    <li><a href="/earnings.html">Ludo Earn Money Group Links</a></li>
+    <li><a href="/regional.html">Regional Ludo Groups</a></li>
+    <li><a href="/entertaining.html">Funny Ludo Groups</a></li>
+    <li><a href="/earnings.html">Earnings Ludo Groups</a></li>
   </ul>
 </div>
 
 <footer>
-  <p>&copy; 2025 JokerLudo Group | All Rights Reserved</p>
+  <p>&copy; 2025 JokerLudo | All rights reserved.</p>
 </footer>
 
 <!-- JSON-LD Structured Data -->
@@ -120,8 +129,8 @@
 {
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "Girls Ludo WhatsApp Group Links",
-  "description": "Join daily updated Girls Ludo WhatsApp Groups to play and enjoy with other female Ludo players.",
+  "name": "JOKER LUDO GIRLS Group",
+  "description": "Join JokerLudo Girls WhatsApp groups for daily fun Ludo matches with active female players.",
   "url": "https://ludogrouplink.com/girls-ludo-group-links"
 }
 </script>
