--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -2,138 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JOKER LUDO GIRLS Group</title>
-  <meta name="description" content="Join Joker Ludo Girls WhatsApp Group to play fun games with female Ludo players. Updated daily." />
-  <meta name="keywords" content="JOKER LUDO GIRLS Group, Girls Ludo WhatsApp Group, Ludo Group for Girls, JokerLudo Girls" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://ludogrouplink.com/girls-ludo-group-links" />
-
-  <!-- Open Graph Meta -->
-  <meta property="og:title" content="JOKER LUDO GIRLS Group" />
-  <meta property="og:description" content="Join JokerLudo Girls Group for fun Ludo matches & community." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ludogrouplink.com/girls-ludo-group-links" />
-  <meta property="og:image" content="https://ludogrouplink.com/assets/og-ludo-girls.jpg" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JOKER LUDO GIRLS GROUP - Join WhatsApp Groups</title>
+  <meta name="description" content="Join 50+ Joker Ludo Girls WhatsApp Groups including India cities and international players. Enjoy fun Ludo matches and make new friends!">
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #fdfdfd;
-      color: #222;
+      padding: 0;
+      background: #fff4fa;
+      color: #333;
     }
-    header, footer {
-      background-color: #ff3366;
-      color: white;
+    header {
+      background-color: #e91e63;
       padding: 1rem;
       text-align: center;
-    }
-    nav a {
-      margin: 0 1rem;
       color: white;
-      text-decoration: none;
-      font-weight: bold;
+      font-size: 1.8rem;
     }
     .container {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
+      max-width: 1200px;
+      margin: auto;
+      padding: 2rem 1rem;
     }
-    h1 {
-      color: #ff3366;
+    .group-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
     }
-    .group-box {
-      background: #fff0f5;
-      border: 1px solid #ff99cc;
-      border-radius: 10px;
-      padding: 1rem;
-      margin: 1rem 0;
+    .card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      text-align: center;
+      transition: transform 0.3s ease;
     }
-    .group-box a {
-      color: #d1005d;
-      font-weight: bold;
+    .card:hover {
+      transform: scale(1.05);
+    }
+    .card h3 {
+      margin-bottom: 1rem;
+      color: #d81b60;
+    }
+    .card a {
       text-decoration: none;
+      background: #d81b60;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      display: inline-block;
+      margin-top: 0.5rem;
     }
-    .group-box a:hover {
-      text-decoration: underline;
-    }
-    footer p {
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: #f8f8f8;
+      color: #888;
       font-size: 0.9rem;
     }
   </style>
 </head>
-
 <body>
 
 <header>
-  <h1>JOKER LUDO GIRLS Group</h1>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/regional.html">Regional</a>
-    <a href="/girls-ludo-group-links">Girls</a>
-    <a href="/news.html">News</a>
-    <a href="/entertaining.html">Entertaining</a>
-    <a href="/earnings.html">Earnings</a>
-    <a href="/privacy-policy.html">Privacy</a>
-    <a href="/contact.html">Contact</a>
-  </nav>
+  🎲 JOKER LUDO GIRLS GROUP – Join 50+ Fun WhatsApp Groups 🎲
 </header>
 
 <div class="container">
-  <h1>Girls Ludo WhatsApp Group Links (Active)</h1>
-  <p>Welcome to the official JOKER LUDO GIRLS group links collection! Join now and connect with awesome female players from across India. 🎲💃</p>
+  <div class="group-grid">
+    <!-- Generate 50+ Group Cards -->
+    <!-- Indian Cities -->
+    <div class="card"><h3>Delhi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Mumbai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Kolkata Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Chennai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Bangalore Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Hyderabad Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Pune Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Lucknow Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Jaipur Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Ahmedabad Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
 
-  <!-- Group Cards with same WhatsApp link -->
-  <div class="group-box">
-    <h3>👑 Girls Only Ludo Group</h3>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
+    <!-- More Indian Cities -->
+    <div class="card"><h3>Patna Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Indore Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Guwahati Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Ranchi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Agra Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+
+    <!-- Countries -->
+    <div class="card"><h3>Pakistani Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Bangladeshi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Nepali Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Russian Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>USA Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>UK Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Canada Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Dubai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Germany Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Brazil Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+
+    <!-- More filler groups -->
+    <div class="card"><h3>Online Ludo Queens Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>24x7 Girls Ludo Match Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Free Entry Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Real Cash Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>VIP Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Live Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Hot Girls Ludo Challenge</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Ludo Star Girls Arena</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Night Players Girls Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+    <div class="card"><h3>Active Girls Ludo Lobby</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
   </div>
-
-  <div class="group-box">
-    <h3>🎲 Ludo Queen Girls Group</h3>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
-  </div>
-
-  <div class="group-box">
-    <h3>💖 Romantic Ludo Group for Girls</h3>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
-  </div>
-
-  <div class="group-box">
-    <h3>👸 Active Girls Ludo Room</h3>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
-  </div>
-
-  <div class="group-box">
-    <h3>💃 Ludo Queens Daily Match</h3>
-    <p><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a></p>
-  </div>
-
-  <p>✅ Note: These are verified WhatsApp groups. Please follow the group rules & enjoy playing Ludo!</p>
-
-  <h2>Other Group Links</h2>
-  <ul>
-    <li><a href="/regional.html">Regional Ludo Groups</a></li>
-    <li><a href="/entertaining.html">Funny Ludo Groups</a></li>
-    <li><a href="/earnings.html">Earnings Ludo Groups</a></li>
-  </ul>
 </div>
 
 <footer>
-  <p>&copy; 2025 JokerLudo | All rights reserved.</p>
+  &copy; 2025 JokerLudo. All rights reserved.
 </footer>
-
-<!-- JSON-LD Structured Data -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "JOKER LUDO GIRLS Group",
-  "description": "Join JokerLudo Girls WhatsApp groups for daily fun Ludo matches with active female players.",
-  "url": "https://ludogrouplink.com/girls-ludo-group-links"
-}
-</script>
 
 </body>
 </html>
