--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -1,126 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JOKER LUDO GIRLS GROUP - Join WhatsApp Groups</title>
-  <meta name="description" content="Join 50+ Joker Ludo Girls WhatsApp Groups including India cities and international players. Enjoy fun Ludo matches and make new friends!">
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>JOKER LUDO GIRLS Group</title>
+  <meta name="description" content="Join 50+ Girls Ludo WhatsApp Groups from India, Pakistan, Russia and more. Play Ludo, make friends, and enjoy!">
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #fff4fa;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #222;
     }
-    header {
-      background-color: #e91e63;
-      padding: 1rem;
+    h1 {
       text-align: center;
-      color: white;
-      font-size: 1.8rem;
+      margin: 20px;
+      color: #e60073;
     }
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-    .group-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
+    .group-container {
+      display: flex;
+      overflow-x: auto;
+      padding: 20px;
+      gap: 16px;
     }
     .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 1.5rem;
+      min-width: 250px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      padding: 16px;
+      flex-shrink: 0;
       text-align: center;
-      transition: transform 0.3s ease;
     }
-    .card:hover {
-      transform: scale(1.05);
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 10px;
     }
     .card h3 {
-      margin-bottom: 1rem;
-      color: #d81b60;
+      margin: 12px 0 8px;
+      color: #ff3399;
+    }
+    .card p {
+      font-size: 14px;
+      margin: 0 0 12px;
     }
     .card a {
+      background: #e60073;
+      color: #fff;
+      padding: 8px 12px;
       text-decoration: none;
-      background: #d81b60;
-      color: white;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
+      border-radius: 20px;
       display: inline-block;
-      margin-top: 0.5rem;
+      font-weight: bold;
     }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background: #f8f8f8;
-      color: #888;
-      font-size: 0.9rem;
+    .card a:hover {
+      background: #cc0052;
     }
   </style>
 </head>
 <body>
 
-<header>
-  🎲 JOKER LUDO GIRLS GROUP – Join 50+ Fun WhatsApp Groups 🎲
-</header>
+<h1>JOKER LUDO GIRLS Group</h1>
+<div class="group-container">
 
-<div class="container">
-  <div class="group-grid">
-    <!-- Generate 50+ Group Cards -->
-    <!-- Indian Cities -->
-    <div class="card"><h3>Delhi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Mumbai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Kolkata Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Chennai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Bangalore Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Hyderabad Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Pune Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Lucknow Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Jaipur Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Ahmedabad Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+<!-- 50 Group Cards -->
+<script>
+  const groupNames = [
+    "Delhi", "Mumbai", "Kolkata", "Chennai", "Bangalore", "Hyderabad", "Pune", "Ahmedabad", "Lucknow", "Jaipur",
+    "Indore", "Nagpur", "Bhopal", "Patna", "Kanpur", "Surat", "Ranchi", "Ludhiana", "Guwahati", "Noida",
+    "Amritsar", "Varanasi", "Meerut", "Agra", "Rajkot", "Vadodara", "Nashik", "Faridabad", "Jodhpur", "Chandigarh",
+    "Russian", "Pakistani", "Bangladeshi", "Nepal", "Afghanistan", "Sri Lankan", "Indonesian", "Thai", "Japanese", "Korean",
+    "USA", "UK", "Canada", "Brazil", "France", "Germany", "Italy", "Spain", "Australia", "UAE"
+  ];
+  const container = document.currentScript.parentNode;
+  const link = "https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p";
 
-    <!-- More Indian Cities -->
-    <div class="card"><h3>Patna Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Indore Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Guwahati Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Ranchi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Agra Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
+  groupNames.forEach(name => {
+    const div = document.createElement("div");
+    div.className = "card";
+    div.innerHTML = `
+      <img src="https://source.unsplash.com/300x300/?girl,${name}" alt="${name} Girl">
+      <h3>${name} Girls Ludo Group</h3>
+      <p>${name} girls ke sath enjoy karein. WhatsApp Ludo group join karke masti karein!</p>
+      <a href="${link}" target="_blank">Join Now</a>
+    `;
+    container.appendChild(div);
+  });
+</script>
 
-    <!-- Countries -->
-    <div class="card"><h3>Pakistani Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Bangladeshi Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Nepali Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Russian Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>USA Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>UK Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Canada Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Dubai Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Germany Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Brazil Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-
-    <!-- More filler groups -->
-    <div class="card"><h3>Online Ludo Queens Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>24x7 Girls Ludo Match Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Free Entry Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Real Cash Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>VIP Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Live Girls Ludo Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Hot Girls Ludo Challenge</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Ludo Star Girls Arena</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Night Players Girls Group</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-    <div class="card"><h3>Active Girls Ludo Lobby</h3><a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Group</a></div>
-  </div>
 </div>
-
-<footer>
-  &copy; 2025 JokerLudo. All rights reserved.
-</footer>
 
 </body>
 </html>
