--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -193,7 +193,7 @@
 </div>
 
 <footer>
-  &copy; 2025 <a href="https://ludogrouplink.com">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
+  &copy; 2025 <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
 </footer>
 
 </body>
