--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="title" content="JOKER LUDO GIRLS Group - Join Fun Ludo WhatsApp Groups" />
+  <meta name="description" content="Join 50+ Girls Ludo WhatsApp Groups from India, Russia, USA, and more. Play, chat, and enjoy with fun-loving players!" />
+  <meta name="keywords" content="Ludo girls group, Ludo WhatsApp group, girls ludo group join, joker ludo, whatsapp ludo link, play ludo online, fun ludo group girls">
+  <meta property="og:title" content="JOKER LUDO GIRLS Group" />
+  <meta property="og:description" content="Join 50+ fun & active girls Ludo WhatsApp groups. Play and connect now!" />
+  <meta property="og:url" content="https://ludogrouplink.com/girls-ludo-group-links" />
+  <meta property="og:type" content="website" />
   <title>JOKER LUDO GIRLS Group</title>
   <style>
     body {
@@ -91,8 +98,6 @@
       color: #ff3cac;
       text-decoration: none;
     }
-
-    /* Horizontal Scrollbar styling (optional) */
     .card-container::-webkit-scrollbar {
       height: 8px;
     }
@@ -113,87 +118,50 @@
 </header>
 
 <div class="card-container">
-<script>
-  const images = [
-    "https://i.pinimg.com/736x/48/8e/3d/488e3d0ae10d6596b2eda425e0e2f484.jpg",
-    "https://i.pinimg.com/736x/9e/68/f5/9e68f5374f7660fe5de4705660b108b1.jpg",
-    "https://i.pinimg.com/736x/9a/bf/eb/9abfeb9f0dfc77f9966848d18b25907d.jpg",
-    "https://i.pinimg.com/736x/e2/95/fd/e295fdd81876765c0ca940a30187f041.jpg",
-    "https://i.pinimg.com/736x/8e/92/80/8e9280b06dd2ea3d9ba946b113ddbedb.jpg",
-    "https://i.pinimg.com/736x/02/96/1d/02961d53a522c9d86f728fdceb8311be.jpg"
-  ];
+  <script>
+    const images = [
+      "https://i.pinimg.com/736x/48/8e/3d/488e3d0ae10d6596b2eda425e0e2f484.jpg",
+      "https://i.pinimg.com/736x/9e/68/f5/9e68f5374f7660fe5de4705660b108b1.jpg",
+      "https://i.pinimg.com/736x/9a/bf/eb/9abfeb9f0dfc77f9966848d18b25907d.jpg",
+      "https://i.pinimg.com/736x/e2/95/fd/e295fdd81876765c0ca940a30187f041.jpg",
+      "https://i.pinimg.com/736x/8e/92/80/8e9280b06dd2ea3d9ba946b113ddbedb.jpg",
+      "https://i.pinimg.com/736x/02/96/1d/02961d53a522c9d86f728fdceb8311be.jpg"
+    ];
 
-  const groupNames = [
-    "Delhi Girls Ludo Group",
-    "Mumbai Girls Ludo Group",
-    "Russian Girls Ludo Group",
-    "Pakistani Girls Ludo Group",
-    "Nepal Girls Ludo Group",
-    "Kolkata Girls Ludo Group",
-    "Lucknow Girls Ludo Group",
-    "Goa Girls Ludo Group",
-    "Dubai Girls Ludo Group",
-    "USA Girls Ludo Group",
-    "UK Girls Ludo Group",
-    "Canada Girls Ludo Group",
-    "Punjab Girls Ludo Group",
-    "Chennai Girls Ludo Group",
-    "Bhopal Girls Ludo Group",
-    "Ranchi Girls Ludo Group",
-    "Thailand Girls Ludo Group",
-    "Bangladesh Girls Ludo Group",
-    "Vietnam Girls Ludo Group",
-    "Singapore Girls Ludo Group",
-    "Jaipur Girls Ludo Group",
-    "Indore Girls Ludo Group",
-    "Nagpur Girls Ludo Group",
-    "Hyderabad Girls Ludo Group",
-    "Agra Girls Ludo Group",
-    "Bihar Girls Ludo Group",
-    "Gujarat Girls Ludo Group",
-    "Shimla Girls Ludo Group",
-    "Manali Girls Ludo Group",
-    "Assam Girls Ludo Group",
-    "Kerala Girls Ludo Group",
-    "Patna Girls Ludo Group",
-    "Noida Girls Ludo Group",
-    "Gurgaon Girls Ludo Group",
-    "Ahmedabad Girls Ludo Group",
-    "Raipur Girls Ludo Group",
-    "Raichur Girls Ludo Group",
-    "Varanasi Girls Ludo Group",
-    "Kanpur Girls Ludo Group",
-    "Amritsar Girls Ludo Group",
-    "Dehradun Girls Ludo Group",
-    "Pune Girls Ludo Group",
-    "Nashik Girls Ludo Group",
-    "Srinagar Girls Ludo Group",
-    "Jammu Girls Ludo Group",
-    "Surat Girls Ludo Group",
-    "Meerut Girls Ludo Group",
-    "Aligarh Girls Ludo Group",
-    "Moradabad Girls Ludo Group",
-    "Bareilly Girls Ludo Group"
-  ];
+    const groupNames = [
+      "Delhi Girls Ludo Group", "Mumbai Girls Ludo Group", "Russian Girls Ludo Group", "Pakistani Girls Ludo Group",
+      "Nepal Girls Ludo Group", "Kolkata Girls Ludo Group", "Lucknow Girls Ludo Group", "Goa Girls Ludo Group",
+      "Dubai Girls Ludo Group", "USA Girls Ludo Group", "UK Girls Ludo Group", "Canada Girls Ludo Group",
+      "Punjab Girls Ludo Group", "Chennai Girls Ludo Group", "Bhopal Girls Ludo Group", "Ranchi Girls Ludo Group",
+      "Thailand Girls Ludo Group", "Bangladesh Girls Ludo Group", "Vietnam Girls Ludo Group", "Singapore Girls Ludo Group",
+      "Jaipur Girls Ludo Group", "Indore Girls Ludo Group", "Nagpur Girls Ludo Group", "Hyderabad Girls Ludo Group",
+      "Agra Girls Ludo Group", "Bihar Girls Ludo Group", "Gujarat Girls Ludo Group", "Shimla Girls Ludo Group",
+      "Manali Girls Ludo Group", "Assam Girls Ludo Group", "Kerala Girls Ludo Group", "Patna Girls Ludo Group",
+      "Noida Girls Ludo Group", "Gurgaon Girls Ludo Group", "Ahmedabad Girls Ludo Group", "Raipur Girls Ludo Group",
+      "Raichur Girls Ludo Group", "Varanasi Girls Ludo Group", "Kanpur Girls Ludo Group", "Amritsar Girls Ludo Group",
+      "Dehradun Girls Ludo Group", "Pune Girls Ludo Group", "Nashik Girls Ludo Group", "Srinagar Girls Ludo Group",
+      "Jammu Girls Ludo Group", "Surat Girls Ludo Group", "Meerut Girls Ludo Group", "Aligarh Girls Ludo Group",
+      "Moradabad Girls Ludo Group", "Bareilly Girls Ludo Group"
+    ];
 
-  const container = document.querySelector('.card-container');
-  groupNames.forEach((name, i) => {
-    const image = images[i % images.length];
-    const card = document.createElement('div');
-    card.className = 'card';
-    card.innerHTML = `
-      <img src="${image}" alt="Girl">
-      <h3>${name}</h3>
-      <p>WhatsApp Ludo group with fun girls. Join now and enjoy unlimited Ludo matches, masti & chat!</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a>
-    `;
-    container.appendChild(card);
-  });
-</script>
+    const container = document.querySelector('.card-container');
+    groupNames.forEach((name, i) => {
+      const image = images[i % images.length];
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        <img src="${image}" alt="${name}">
+        <h3>${name}</h3>
+        <p>Join this WhatsApp Ludo group with amazing girls from ${name.split(" ")[0]}. Fun, masti & 24/7 Ludo matches!</p>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a>
+      `;
+      container.appendChild(card);
+    });
+  </script>
 </div>
 
 <footer>
-  &copy; 2025 <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
+  &copy; 2025 <a href="https://ludogrouplink.com">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
 </footer>
 
 </body>
