--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -111,9 +111,16 @@
 
 <header>
   <h1>JOKER LUDO GIRLS Group</h1>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/add-group">Add Group</a>
+ <nav class="navbar">
+    <a href="index.html" class="logo">🎲 JokerLudo Group</a>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join Group</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
+    </div>
   </nav>
 </header>
 
@@ -161,6 +168,16 @@
 </div>
 
 <footer>
+   <div class="footer-links" aria-label="Footer navigation links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+  </footer>
   &copy; 2025 <a href="https://ludogrouplink.com">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
 </footer>
 
