--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -43,20 +43,22 @@
     }
 
     .card-container {
-      display: flex;
-      overflow-x: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
       padding: 30px 20px;
     }
 
     .card {
-      flex: 0 0 auto;
-      width: 250px;
       background: #1f1f1f;
       border-radius: 12px;
       padding: 15px;
       text-align: center;
       box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
     }
     .card img {
       width: 100%;
@@ -85,6 +87,7 @@
     .card a:hover {
       background: #ff71c4;
     }
+
     footer {
       margin-top: 40px;
       padding: 20px;
@@ -98,12 +101,8 @@
       color: #ff3cac;
       text-decoration: none;
     }
-    .card-container::-webkit-scrollbar {
-      height: 8px;
-    }
-    .card-container::-webkit-scrollbar-thumb {
-      background: #555;
-      border-radius: 4px;
+    footer .footer-links a {
+      margin: 0 10px;
     }
   </style>
 </head>
@@ -111,16 +110,13 @@
 
 <header>
   <h1>JOKER LUDO GIRLS Group</h1>
- <nav class="navbar">
-   
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join Group</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="contact.html">Contact</a>
-      <a href="privacy.html">Privacy</a>
-    </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="rules.html">Rules</a>
+    <a href="join.html">Join Group</a>
+    <a href="addgroup.html">Add Group</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy</a>
   </nav>
 </header>
 
@@ -154,13 +150,14 @@
     const container = document.querySelector('.card-container');
     groupNames.forEach((name, i) => {
       const image = images[i % images.length];
+      const city = name.split(" ")[0];
       const card = document.createElement('div');
       card.className = 'card';
       card.innerHTML = `
         <img src="${image}" alt="${name}">
         <h3>${name}</h3>
-        <p>Join this WhatsApp Ludo group with amazing girls from ${name.split(" ")[0]}. Fun, masti & 24/7 Ludo matches!</p>
-        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Now</a>
+        <p>Enjoy non-stop fun and Ludo matches with cute girls from ${city}. Join now and play daily!</p>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" target="_blank">Join Joker Ludo Group</a>
       `;
       container.appendChild(card);
     });
@@ -168,17 +165,15 @@
 </div>
 
 <footer>
-   <div class="footer-links" aria-label="Footer navigation links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="contact.html">Contact</a>
-    </div>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
-  </footer>
-  &copy; 2025 <a href="https://ludogrouplink.com">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.
+  <div class="footer-links">
+    <a href="index.html">Home</a>
+    <a href="rules.html">Rules</a>
+    <a href="join.html">Join</a>
+    <a href="addgroup.html">Add Group</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="contact.html">Contact</a>
+  </div>
+  <p>© 2025 <a href="https://ludogrouplink.com">ludogrouplink.com</a> | Made with ❤️ for Ludo lovers | All rights reserved.</p>
 </footer>
 
 </body>
