--- a/join.html
+++ b/join.html
@@ -176,9 +176,10 @@
     </div>
 
     <div class="group-card">
-      <h3>💥 Joker Ludo Group 2</h3>
+      <h3>💥Page Name	URL
+Whatsapp-ludo-group-link-joker</h3>
       <p>Daily matches | Trusted admin | No cheating</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
+      <a href="	https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
