--- a/join.html
+++ b/join.html
@@ -176,18 +176,42 @@
     </div>
 
     <div class="group-card">
-      <h3>💥Page Name	URL
-Whatsapp-ludo-group-link-joker</h3>
+      <h3>💥Whatsapp-ludo-group-link-joker</h3>
       <p>Daily matches | Trusted admin | No cheating</p>
-      <a href="	https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
     </div>
 
     <div class="group-card">
-      <h3>💥 Joker Ludo Group 3</h3>
+      <h3>💥 earning-ludo-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
 
+     <div class="group-card">
+      <h3>💥girls-ludo-group-links</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://ludogrouplink.com/joker-ludo-group-link.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+     <div class="group-card">
+      <h3>💥joker-ludo-whatsapp-group</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://ludogrouplink.com/joker-ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+     <div class="group-card">
+      <h3>💥ludo whatsapp group link</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://ludogrouplink.com/ludo%20whatsapp%20group%20link.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+     <div class="group-card">
+      <h3>💥 ludo-king-whatsapp-group-links</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://ludogrouplink.com/ludo-king-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
+     <div class="group-card">
+      <h3>💥 Dubai-ludo-group</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
+    </div>
     <!-- Add more group-card blocks as needed -->
   </div>
 
