--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ ludo group link
 whatsapp ludo group link
 ludo king whatsapp group link
 ludo king group link
-mk ludo group
+joker ludo group
 whatsapp ludo group
 ludo whatsapp group
 ludo group link whatsapp
@@ -235,17 +235,17 @@ whatsapp ludo group
 ludo group link whatsapp
 ludo whatsapp group
 trusted ludo group link
-ludo king whatsapp group link<strong>trusted ludo group
-mk ludo group
+ludo king whatsapp group link<strong trusted ludo group
+joker ludo group
 ludo whatsapp group link
-money king ludo group
+joker king ludo group
 ludo king group link
-mk ludo group link
+joker ludo group link
 ludo game group link
 online ludo group link
-mg ludo group
+joker ludo group
 ludo king group
-moneyking ludo group ludo
+ludoking ludo group ludo
 whatsapp group link
 ludo group late night
 ludo group ludo king
