--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section class="features" aria-label="Topics Covered Related Ludo Group link">
     <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Topics Covered Related Ludo Group link</h2>
     <section class="seo-text" aria-label="Information about Ludo WhatsApp Groups">
-    <pLudo Group
+    <p> Ludo Group
 ludo group link
 whatsapp ludo group link
 ludo king whatsapp group link
@@ -235,7 +235,7 @@ whatsapp ludo group
 ludo group link whatsapp
 ludo whatsapp group
 trusted ludo group link
-ludo king whatsapp group link<strong trusted ludo group
+ludo king whatsapp group link strong trusted ludo group
 joker ludo group
 ludo whatsapp group link
 joker king ludo group
@@ -259,8 +259,7 @@ best ludo group link
 sachin Ludo group
 money king
 money king ludo
-moneky king ludo</strong> to join active communities of Ludo players. Whether you want to join <strong>trusted Ludo King WhatsApp groups</strong>, <strong>earning Ludo groups</strong>, or <strong>online Ludo players groups</strong>, JokerLudo provides daily updated and spam-free group links. Join now and start playing to win real cash rewards instantly!</p>
-  </section>
+moneky king ludo </p>
   </section>
 
   <footer>
