--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Best Ludo WhatsApp Group Links | JokerLudo" />
   <meta property="og:description" content="Join top trusted Ludo WhatsApp groups with JokerLudo. Free, verified, and rewarding! Ludo King group, earning groups, and daily updates." />
-  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:url" content="https://ludogrouplink.com/join.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="JokerLudo" />
   <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
@@ -110,7 +110,7 @@
       gap: 20px;
       padding: 40px 20px;
     }
-    .card {
+    .card, .group-card {
       background: #fff;
       padding: 20px;
       border-radius: 12px;
@@ -141,7 +141,6 @@
     @media(max-width: 768px){
       .features { flex-direction: column; }
     }
-    /* Additional SEO text style */
     .seo-text {
       max-width: 800px;
       margin: 20px auto 40px auto;
@@ -175,11 +174,11 @@
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
 
-  <section class="seo-text" aria-label="Information about Ludo WhatsApp Groups">
+  <section class="seo-text">
     <p>Explore the best and verified <strong>Ludo WhatsApp group links</strong> to join active communities of Ludo players. Whether you want to join <strong>trusted Ludo King WhatsApp groups</strong>, <strong>earning Ludo groups</strong>, or <strong>online Ludo players groups</strong>, JokerLudo provides daily updated and spam-free group links. Join now and start playing to win real cash rewards instantly!</p>
   </section>
 
-  <section class="features" aria-label="Platform Features">
+  <section class="features">
     <div class="card">
       <h3>✅ 24x7 Support</h3>
       <p>Hamesha aapke sath – turant response.</p>
@@ -194,96 +193,45 @@
     </div>
   </section>
 
-  <section class="features" aria-label="Verified Ludo WhatsApp Groups">
+  <section class="features">
     <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Verified Ludo Groups</h2>
     <div class="card">
       <h3>🔥 LudoStar</h3>
       <p>Join now & win real cash in Ludo King tournaments!</p>
-      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn" aria-label="Join LudoStar WhatsApp Group">Join Group</a>
+      <a href="https://chat.whatsapp.com/your-group-link-1" class="join-btn">Join Group</a>
     </div>
     <div class="card">
       <h3>🔥 FastWin Ludo</h3>
       <p>Quick deposits & payouts. Trusted WhatsApp Ludo group.</p>
-      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn" aria-label="Join FastWin Ludo WhatsApp Group">Join Group</a>
+      <a href="https://chat.whatsapp.com/your-group-link-2" class="join-btn">Join Group</a>
     </div>
-    <!-- Add more groups as needed -->
-
-<section class="features" aria-label="Topics Covered Related Ludo Group link">
-    <h2 style="width:100%; text-align:center; margin-bottom:20px;">🔥 Topics Covered Related Ludo Group link</h2>
-    <section class="seo-text" aria-label="Information about Ludo WhatsApp Groups">
-    <p> Ludo Group
-ludo group link
-whatsapp ludo group link
-ludo king whatsapp group link
-ludo king group link
-joker ludo group
-whatsapp ludo group
-ludo whatsapp group
-ludo group link whatsapp
-ludo king group whatsapp
-ludo
-ludo group whatsapp
-ludo game group link
-ludo betting whatsapp group link
-ludo king betting whatsapp group
-ludo king betting group
-ludo whatsapp group link
-ludo group link
-ludo group
-whatsapp ludo group link
-whatsapp ludo group
-ludo group link whatsapp
-ludo whatsapp group
-trusted ludo group link
-ludo king whatsapp group link strong trusted ludo group
-joker ludo group
-ludo whatsapp group link
-joker king ludo group
-ludo king group link
-joker ludo group link
-ludo game group link
-online ludo group link
-joker ludo group
-ludo king group
-ludoking ludo group ludo
-whatsapp group link
-ludo group late night
-ludo group ludo king
-ludo king group
-ludo king whatsapp group link
-ludo group link
-ludo sabse trusted group
-Best ludo group
-best ludo group link
-5% ludo group
-sachin Ludo group
-money king
-money king ludo
-moneky king ludo </p>
   </section>
-<br><br>
-<div class="group-card">
-  <h3>💥 Joker Ludo Group 1</h3>
-  <p>Real cash games | Instant payment | Fair play</p>
-  <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" target="_blank">Join Now</a>
-</div>
 
-<div class="group-card">
-  <h3>💥 Joker Ludo Group 2</h3>
-  <p>Daily matches | Trusted admin | No cheating</p>
-  <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" target="_blank">Join Now</a>
-</div>
+  <section class="seo-text">
+    <h2>🔥 Topics Covered Related to Ludo Groups</h2>
+    <p>Ludo group link, WhatsApp Ludo groups, Joker Ludo, Ludo King betting, real cash games, verified Ludo earning groups, money king ludo, online ludo WhatsApp group, trusted group link, daily ludo matches etc.</p>
+  </section>
 
-<div class="group-card">
-  <h3>💥 Joker Ludo Group 3</h3>
-  <p>24/7 Ludo games | Quick entry | Real players only</p>
-  <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn" target="_blank">Join Now</a>
-</div>
-```
+  <section class="features">
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 1</h3>
+      <p>Real cash games | Instant payment | Fair play</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 2</h3>
+      <p>Daily matches | Trusted admin | No cheating</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+    <div class="group-card">
+      <h3>💥 Joker Ludo Group 3</h3>
+      <p>24/7 Ludo games | Quick entry | Real players only</p>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Now</a>
+    </div>
+  </section>
 
-  </div>
   <footer>
-    <div class="footer-links" aria-label="Footer navigation links">
+    <div class="footer-links">
       <a href="index.html">Home</a>
       <a href="rules.html">Rules</a>
       <a href="join.html">Join</a>
