--- a/index.html
+++ b/index.html
@@ -209,7 +209,56 @@
 
   <section class="seo-text">
     <h2>🔥 Topics Covered Related to Ludo Groups</h2>
-    <p>Ludo group link, WhatsApp Ludo groups, Joker Ludo, Ludo King betting, real cash games, verified Ludo earning groups, money king ludo, online ludo WhatsApp group, trusted group link, daily ludo matches etc.</p>
+    <p> Ludo Group
+ludo group link
+whatsapp ludo group link
+ludo king whatsapp group link
+ludo king group link
+mk ludo group
+whatsapp ludo group
+ludo whatsapp group
+ludo group link whatsapp
+ludo king group whatsapp
+ludo
+ludo group whatsapp
+ludo game group link
+ludo betting whatsapp group link
+ludo king betting whatsapp group
+ludo king betting group
+ludo whatsapp group link
+ludo group link
+ludo group
+whatsapp ludo group link
+whatsapp ludo group
+ludo group link whatsapp
+ludo whatsapp group
+trusted ludo group link
+ludo king whatsapp group link
+trusted ludo group
+mk ludo group
+ludo whatsapp group link
+money king ludo group
+ludo king group link
+mk ludo group link
+ludo game group link
+online ludo group link
+joker ludo group
+ludo king group
+loker king ludo group ludo
+whatsapp group link
+ludo group late night
+ludo group ludo king
+ludo king group
+ludo king whatsapp group link
+ludo group link
+ludo sabse trusted group
+Best ludo group
+best ludo group link
+5% ludo group
+sachin Ludo group
+money king
+surya ludo
+moneky king ludoLudo group link, WhatsApp Ludo groups, Joker Ludo, Ludo King betting, real cash games, verified Ludo earning groups, money king ludo, online ludo WhatsApp group, trusted group link, daily ludo matches etc.</p>
   </section>
 
   <section class="features">
